// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label> snapshots renders correctly when abbr is NOT given and not required 1`] = `
<label>
  Label: 
  <input
    type="text"
    value="hello"
  />
  
</label>
`;

exports[`<Label> snapshots renders correctly when abbr is given and not required 1`] = `
<label
  onInput={[Function]}
>
  Label: 
  <input
    type="text"
    value="hello"
  />
  
  <span>
    <abbr
      onClick={[Function]}
      title="A very good hint"
    >
      ?
    </abbr>
    <span />
  </span>
</label>
`;

exports[`<Label> snapshots when required and no abbr 1`] = `
<label>
  Label: 
  <input
    type="text"
    value="hello"
  />
  <span
    className="danger"
  >
    *
  </span>
</label>
`;

exports[`<Label> snapshots when required and yes abbr 1`] = `
<label
  onInput={[Function]}
>
  Label: 
  <input
    type="text"
    value="hello"
  />
  <span
    className="danger"
  >
    *
  </span>
  <span>
    <abbr
      onClick={[Function]}
      title="Hello"
    >
      ?
    </abbr>
    <span />
  </span>
</label>
`;
